# oui-spy-unified-blue

./: .clang-format  .dockerignore  .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  CLAUDE.md  Justfile  README.md  flash.py  partitions_16mb.csv  platformio.ini  pyproject.toml  requirements-dev.txt
.devcontainer/: Dockerfile  README.md  devcontainer.json  devcontainer.portable.json  devcontainer.usb-linux.json  select-profile.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  devcontainer.yml  platformio-dependency-smoke.yml  release-firmware.yml
debug/: wifi-check.swift  wifi-connect.swift  wifi-scan.swift
docs/adr/: 001-usb-dashboard-access.md  002-esp-idf-5x-platform-upgrade.md
scripts/: flash.py  generate_cert.py  native_coverage.py  prebuild_web.py
src/: main.cpp  opendroneid.h  wifi.c
src/app/: main.cpp
src/hal/: ble_mgr.cpp  ble_mgr.h  board.h  buzzer.cpp  buzzer.h  buzzer_logic.cpp  buzzer_logic.h  dns_server.cpp  dns_server.h  gps.cpp  gps.h  led.h  mac_util.h  mdns_setup.cpp  mdns_setup.h  neopixel.cpp  neopixel.h  neopixel_logic.cpp  neopixel_logic.h  notify.cpp  notify.h  pins.h  wifi_mgr.cpp  wifi_mgr.h
src/modules/: detector.cpp  detector.h  detector_logic.cpp  detector_logic.h  flockyou.cpp  flockyou.h  flockyou_logic.cpp  flockyou_logic.h  foxhunter.cpp  foxhunter.h  foxhunter_logic.cpp  foxhunter_logic.h  module.h  skyspy.cpp  skyspy.h  skyspy_logic.cpp  skyspy_logic.h  wardriver.cpp  (+3 more)
tests/: test_flash.py
web/: biome.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+75 files in other folders)
